  70.  [func]		each
  	Added a hot-spot cache to libdatasrc to speed up access to
	repeatedly-queried data and reduce the number of queries to
	the underlying database; this should substantially improve
	performance.  Also added a "-n" ("no cache") option to
	bind10 and b10-auth to disable the cache if needed.
	(Trac #192, svn r2383)

bind10-devel-20100701 released on July 1, 2010

  69.  [func]*		jelte
	Added python wrappers for libdns++ (isc::dns), and libxfr. This
	removes the dependency on Boost.Python. The wrappers don't
	completely implement all functionality, but the high-level API
	is wrapped, and current modules use it now.
	(Trac #181, svn r2361)

  68.  [func]		zhanglikun
	Add options -c(--certificate-chain) to bindctl. Override class
	HTTPSConnection to support server certificate validation.
	Add support to cmdctl.spec file, now there are three configurable 
	items for cmdctl: 'key_file', 'cert_file' and 'accounts_file', 
	all of them can be changed in runtime.
	(Trac #127, svn r2357)

  67.  [func]		zhanglikun
	Make bindctl's command parser only do minimal check.
	Parameter value can be a sequence of non-space characters,
	or a string surrounded by quotation marks (these marks can
	be a part of the value string in escaped form). Make error
	message be more friendly. (If there is some error in
	parameter's value, the parameter name will be provided).
	Refactor function login_to_cmdctl() in class BindCmdInterpreter:
	avoid using Exception to catch all exceptions.
	(Trac #220, svn r2356)

  66.  [bug]		each
	Check for duplicate RRsets before inserting data into a message
	section; this, among other things, will prevent multiple copies
	of the same CNAME from showing up when there's a loop.  (Trac #69,
	svn r2350)
    
  65.  [func]		shentingting
	Various loadzone improvements: allow optional comment for
	$TTL, allow optional origin and comment for $INCLUDE, allow
	optional comment for $ORIGIN, support BIND9 extension of